--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "epubjs": "^0.3.83",
     "localforage": "^1.7.3",
     "minio": "^7.0.2",
-    "node-sass": "^4.11.0",
     "vue": "^2.5.21",
+    "vue-i18n": "^8.7.0",
     "vuescroll": "^4.9.4",
+    "vuetify": "^1.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   },
